<resources>
    <string name="app_name">Trabalho Final Mobile</string>
    <string name="logotipo">logotipo</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="esqueci_minha_senha">Esqueci Minha Senha</string>
    <string name="perfil">Perfil</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="sair">Sair</string>
    <string name="tituloGrafico">Resumo da conta</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>
    <string name="ano">Ano</string>
    <string name="data">Data</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="email">Email</string>
    <string name="enviar">Enviar</string>
    <string name="splashlogo">SplashLogo</string>
    <string name="qual_o_intervalo_de_pesquisa">Qual o intervalo de pesquisa?</string>
    <string name="data_inicial">Data inicial</string>
    <string name="data_final">Data Final</string>
    <string name="ir">IR</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="gps">GPS</string>
    <string name="bolsaValores">Bolsa de Valores</string>
    <string name="dolar">Dolar</string>
    <string name="resultados_do_intervalo">Resultados do Intervalo:</string>
    <string name="escolha_uma_op_o">Escolha uma Opção:</string>
    <string name="conta_corrente">Conta Corrente</string>
    <string name="consultar_conta_corrente">Consultar conta corrente</string>
    <string name="valor">Valor</string>
    <string name="o_valor_atual_na_sua_conta">O Valor atual na sua conta é:</string>
    <string name="transa_es">Transações</string>
    <string name="confirma">Confirma</string>
    <string name="selecione_uma_data">Selecione uma data</string>
    <string name="name">Name</string>
    <string name="descreva_a_transa_o">Descreva a transação:</string>
    <string name="todo">TODO</string>
    <string name="modificar_senha">Modificar Senha</string>
    <string name="Email">Email:</string>
    <string name="telefone">Telefone</string>
    <string name="Telefone">Telefone:</string>
    <string name="nome">Nome</string>
    <string name="Usuario">Usuario</string>
    <string name="salvar">Salvar</string>
    <string name="nova_senha">Nova Senha:</string>
    <string name="senha_atual">Senha Atual:</string>
    <string name="cancelar">Cancelar</string>
    <string name="remover">Remover</string>
    <string name="adicionar">Adicionar</string>
    <string name="selecione_uma_categoria">Selecione uma Categoria</string>
    <string name="escolha_uma_op_o_adicionar_ou_retirar_valor_na_conta">Escolha uma opção: Adicionar ou Retirar valor na Conta?</string>
    <string name="alimenta_o">Alimentação</string>
    <string name="casa">Casa</string>
    <string name="educa_o">Educação</string>
    <string name="imposto">Imposto</string>
    <string name="lazer">Lazer</string>
    <string name="seguro">Seguro</string>
    <string name="valor_a_ser_adicionado">Valor a ser Adicionado:</string>
    <string name="valor_a_ser_removido">Valor a ser Removido:</string>
    <string name="senha1">Senha:</string>
    <string name="confirma_senha">Confirma Senha:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="usuario1">Usuario:</string>
    <string name="nome1">Nome:</string>
    <string name="usuario2">Usuario</string>
    <string name="nome2">Nome</string>
    <string name="confirma_a_senha">Confirma a senha</string>
    <string name="senha2">Senha</string>
</resources>
